--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: "20.17.0"
       - name: Cache NPM dependencies
         uses: actions/cache@v4
-        with:
+        with: 20, 18.19, >=16.20.2, lts/Iron, lts/Hydrogen, *, latest, current, node
           path: node_modules
           key: ${{ runner.OS }}-npm-cache
           restore-keys: |
