--- a/_config.yml
+++ b/_config.yml
@@ -104,3 +104,20 @@ deploy:
   type: ''
   # repo: https://github.com/cannoyroy/cannoyroy.github.io
   # branch: main
+
+
+plugins:
+  - hexo-asset-img
+
+# asset_img:
+#   enable: true
+#   # 图片目录，相对于source目录
+#   dir: images
+#   # 是否压缩图片
+#   compress: true
+#   # 压缩质量，0-1之间，默认为0.6
+#   quality: 0.6
+#   # 是否生成缩略图
+#   thumbnail: true
+#   # 缩略图大小，默认为120x120
+#   thumbnail_size: 120x120
