--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: unTymen
+subtitle: "人生无限"
 description: ''
 keywords:
-author: John Doe
-language: en
+author: Jiayu Qian
+language: zh-CN
 timezone: ''
 
 # URL
