--- a/themes/anzhiyu/_config.yml
+++ b/themes/anzhiyu/_config.yml
@@ -11,7 +11,7 @@ menu:
 
   我的:
     音乐馆: /music/ || anzhiyu-icon-music
-    碎碎念: https://tinymind.me/cannoyroy/thoughts || anzhiyu-icon-envelope
+    # 碎碎念: https://tinymind.me/cannoyroy/thoughts || anzhiyu-icon-envelope
     # 视频页: https://space.bilibili.com/486926861 || anzhiyu-icon-bilibili
     # 相册集: /album/ || anzhiyu-icon-images
     # 小空调: /air-conditioner/ || anzhiyu-icon-fan
