--- a/themes/anzhiyu/_config.yml
+++ b/themes/anzhiyu/_config.yml
@@ -12,7 +12,7 @@ menu:
   我的:
     # 音乐馆: /music/ || anzhiyu-icon-music
     友人帐: /link/ || anzhiyu-icon-link
-    # 碎碎念: https://tinymind.me/cannoyroy/thoughts || anzhiyu-icon-envelope
+    WiKi: https://wiki.untymen.com/ || anzhiyu-icon-lightbulb
     # 视频页: https://space.bilibili.com/486926861 || anzhiyu-icon-bilibili
     # 相册集: /album/ || anzhiyu-icon-images
     # 小空调: /air-conditioner/ || anzhiyu-icon-fan
