--- a/themes/anzhiyu/_config.yml
+++ b/themes/anzhiyu/_config.yml
@@ -13,6 +13,7 @@ menu:
     # 音乐馆: /music/ || anzhiyu-icon-music
     友人帐: /link/ || anzhiyu-icon-link
     WiKi: https://wiki.untymen.com/ || anzhiyu-icon-lightbulb
+    题库: https://algo.untymen.com/ || anzhiyu-icon-keyboard
     # 视频页: https://space.bilibili.com/486926861 || anzhiyu-icon-bilibili
     # 相册集: /album/ || anzhiyu-icon-images
     # 小空调: /air-conditioner/ || anzhiyu-icon-fan
