--- a/themes/typography/_config.yml
+++ b/themes/typography/_config.yml
@@ -1,12 +1,12 @@
-title_primary: "活版印字" # the bigger text
-title_secondary: "Typography" # the smaller text
+title_primary: "溺 | 于深海呼吸" # the bigger text
+title_secondary: "unTymen's blog" # the smaller text
 keywords:
 
 twitter: #username
 rss: atom.xml
 weibo: #username/id
 instagram: #username
-github: #username
+github: cannoyroy#username
 
 # Choose the comment service according to your need.
 # Please do not use the two services at the same time.
