--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,15 @@ subtitle: "人生无限"
 description: ''
 keywords:
 author: Cannoy
-language: zh-CN
 timezone: ''
+
+# Directory
+source_dir: source
+public_dir: public
+tag_dir: tags
+archive_dir: archives
+category_dir: /categories/
+
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
@@ -13,7 +20,7 @@ url: https://untymen.com/
 permalink: :year/:month/:day/:hash/
 permalink_defaults:
 pretty_urls:
-  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
+  trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
   trailing_html: true # Set to false to remove trailing '.html' from permalinks
 
 theme: typography
@@ -47,10 +54,10 @@ tag_generator:
 feed:
   type: atom
   path: atom.xml
-  limit: 20
+  limit: 40
   hub:
   content:
-  content_limit: 140
+  content_limit: 200
   content_limit_delim: ' '
 
 # For syntax highlighting
