--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,7 +28,9 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-npm-cache
       - name: Install Dependencies
-        run: npm install
+        run: 
+          npm cache clean --force
+          npm install
       - name: Build
         run: npm run build
       - name: Upload Pages artifact
