--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,7 +29,7 @@ jobs:
             ${{ runner.OS }}-npm-cache
       - name: Install Dependencies
         run: 
-          npm cache clean --force
+          # npm cache clean --force
           npm install
       - name: Build
         run: npm run build
