--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,8 +28,8 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-npm-cache
       - name: Install Dependencies
-        run: 
-          # npm cache clean --force
+        run: |
+          npm cache clean --force
           npm install
       - name: Build
         run: npm run build
