--- a/source/_data/projects.json
+++ b/source/_data/projects.json
@@ -1,12 +1,7 @@
 [
     {
-       "name":"Hexo",
-       "url":"https://hexo.io/",
-       "desc":"A fast, simple & powerful blog framework"
-    },
-    {
-       "name":"Font Awesome",
-       "url":"http://fontawesome.io/",
-       "desc":"The iconic font and CSS toolkit"
+       "name":"WAITING",
+       "url":"https://untymen.com/",
+       "desc":"WAITING"
     }
 ]
