--- a/source/_data/projects.json
+++ b/source/_data/projects.json
@@ -1,7 +1,7 @@
 [
     {
-       "name":"WAITING",
-       "url":"https://untymen.com/",
-       "desc":"WAITING"
+       "name":"High School English Writing Coach(高中英语写作全能教练)",
+       "url":"https://www.moreturn.cn/",
+       "desc":"Powered by Vue 3, Dify, & LeanCloud. Delivers a full loop: Error Detection → Issue Clustering → Targeted Resource Generation.\n基于 Vue 3 + Dify + LeanCloud 的写作私教。实现“错误检测 → 问题聚类 → 资源生成”的全流程闭环。"
     }
 ]
