--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -83,7 +83,7 @@ post:
 # Note: if start_year/end_year not provided, will use current year.
 copyright:
   start_year: 2024
-  end_year: 
+  end_year: 2050
 
 # Customize the 404 page
 # Options:
@@ -190,8 +190,8 @@ google_analytics:
 
 # Fill in your Baidu Analytics tracking ID to enable Baidu Analytics.
 baidu_analytics:
-  enabled: false
-  id: 2e6da3c375c8a87f5b664cea6d4cb29c
+  enabled: true
+  id: 9e7d2160c64cb3e6397cab061253fa95
 
 # Fill in your Cloudflare Analytics tracking ID to enable Cloudflare Analytics.
 cloudflare_analytics:
